[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "ccxt>=4.5.0",
    "flask>=3.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "psutil>=7.0.0",
    "python-binance>=1.0.29",
    "python-telegram-bot==20.7",
    "scikit-learn>=1.7.1",
]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
